--- a/config-example.yaml
+++ b/config-example.yaml
@@ -1,7 +1,7 @@
 parsing:
   explicit_metrics: true
   enable_timestamps: false
-  enable_empty_hosts: true  # if true, will load metrics with empty or missing 'hosts' field without host restriction
+  enable_empty_hosts: true    # if true, will load metrics with empty or missing 'hosts' field without host restriction
 
 metrics:
   - key: 'local.metric[uwsgi,workers,*,*]'
@@ -12,10 +12,12 @@ metrics:
       status: $2
     reject:
       - 'total'
-    hosts:            # list of hosts to load this metric from
-      - name.of.host.1
-      - name.of.host.2
-    item_names:       # only items with names fitting one of the given patterns will be exported
+    hosts:                      # list of hosts to load this metric from
+      - name.of.host.1          # simple host
+      - name: name.of.host.2    # complex host with additional item_name masks
+        item_names:
+          - '*host.specific.item.name*'
+    item_names:                 # only items with names fitting one of the given patterns will be exported
       - '*item.name.substr.1*'
       - '*item.name.substr.2*'
   - key: 'metric.with.minimal.settings'
